syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ujjawal.user_management_system.passwordservice.grpc";
option java_outer_classname = "UserPasswordServiceProto";

service UserPasswordService {
  rpc setPasswordByIdentifier (UserPasswordRequest) returns (UserPasswordResponse);
}

message UserPasswordRequest {
  string identifier = 1;
  string hashedPassword = 2;
}

message UserPasswordResponse {
  bool passwordSaved = 1;
  bool userExists = 2;
}
